onkentesek jelentkezese esemenyekre es azon belul teruletekre, a jelentkezesek kezelese, letoltheto csv a jelentkezokrol szurokkel